--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -15,6 +15,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('personal.index') }}">Hello, {{ current_user.username }}</a>
                 </li>
+                {% if current_user.is_admin %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('crud.index') }}">Admin Panel</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link btn btn-outline-secondary" href="{{ url_for('auth.logout') }}">Logout</a>
                 </li>
